# POM

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.txt  test_trmm.mlir
ablation/2mm/: 2mm.mlir  2mm_LI_LP.cpp  2mm_LI_LP.rpt  2mm_LI_LT_LP_LU.cpp  2mm_LI_LT_LP_LU.rpt  2mm_LI_LT_LP_LU_AP.cpp  2mm_LI_LT_LP_LU_AP.rpt  2mm_LP.cpp  2mm_LP.rpt
ablation/bicg/: bicg.mlir  bicg_LP.cpp  bicg_LP.rpt  bicg_LS_LI_LF_LP.cpp  bicg_LS_LI_LF_LP.rpt  bicg_LS_LI_LF_LT_LP_LU.cpp  bicg_LS_LI_LF_LT_LP_LU.rpt  bicg_LS_LI_LF_LT_LP_LU_AP.rpt  bicg_LS_LI_LP.cpp  bicg_LS_LI_LP.rpt
ablation/edgeDetect/: edgeDetect._LT_LP_LU.cpp  edgeDetect._LT_LP_LU.rpt  edgeDetect._LT_LP_LU_AP.cpp  edgeDetect._LT_LP_LU_AP.rpt  edgeDetect.mlir  edgeDetect_LP.cpp  edgeDetect_LP.rpt
ablation/gemm/: gemm.mlir  gemm_LI_LP.cpp  gemm_LI_LP.rpt  gemm_LI_LT_LP_LU.cpp  gemm_LI_LT_LP_LU.rpt  gemm_LI_LT_LP_LU_AP.rpt  gemm_LP.cpp  gemm_LP.rpt
ablation/jacobi/: jacobi.cpp  jacobi.mlir
ablation/jacobi2d/: jacobi2d.mlir  jacobi2d_LP.cpp  jacobi2d_LP.rpt  jacobi2d_LT_LP_LU.cpp  jacobi2d_LT_LP_LU.rpt  jacobi2d_LT_LP_LU_AP.rpt
ablation/seidel/: sediel_LSK_LP.cpp  sediel_LSK_LP.rpt  sediel_LSK_LP_AP.rpt  seidel.mlir  seidel_LP.cpp  seidel_LP.rpt
ablation/vgg16/: vgg16.mlir
balance/2mm/: 2mm.mlir  2mm_25%dsp.cpp  2mm_75%dsp.cpp
baselines/: jacobi2d.c  seidel.c  vgg16_baseline.cpp  vgg16_scalehls_t2_lu2.cpp
include/polyhedral/: codegen.h  compute.h  core.h  debug.h  expr.h  function.h  generator.h  generator_isl.h  placeholder.h  type.h
lib/: CMakeLists.txt
lib/polyhedral/: codegen.cpp  compute.cpp  core.cpp  expr.cpp  function.cpp  generator.cpp  generator_isl.cpp  placeholer.cpp  test.cpp
sample_l/2mm/: 2mm.cpp  2mm.mlir  2mm_16.cpp  2mm_large.cpp
sample_l/3mm/: 3mm.cpp  3mm.mlir  3mm_large.cpp
sample_l/gemm/: gemm.cpp  gemm.mlir  gemm_large.cpp
samples/: bicg.mlir  config.json  dse_test.csv  gemm.mlir  jacobi_1d.mlir  sediel.mlir  test.mlir
samples/2mm/: 2mm.cpp  2mm.csv  2mm.mlir  2mm_1024.cpp  2mm_1024.mlir  2mm_128.cpp  2mm_128.mlir  2mm_2048.cpp  2mm_2048.mlir  2mm_256.cpp  2mm_256.mlir  2mm_32.cpp  2mm_32.mlir  2mm_512.cpp  2mm_512.mlir  2mm_64.cpp  2mm_64.mlir  2mm_8192.cpp  2mm_8192.mlir  gemm.cpp  gemm.mlir
samples/3mm/: 3mm.cpp  3mm.csv  3mm.mlir  3mm_1024.cpp  3mm_1024.mlir  3mm_128.cpp  3mm_128.mlir  3mm_2048.cpp  3mm_2048.mlir  3mm_256.cpp  3mm_256.mlir  3mm_32.cpp  3mm_32.mlir  3mm_4096.cpp  3mm_4096.mlir  3mm_512.cpp  3mm_512.mlir  3mm_64.cpp  3mm_64.mlir  3mm_8192.cpp  3mm_8192.mlir
samples/atax/: atax.cpp  atax.mlir
samples/bicg/: bicg.cpp  bicg.csv  bicg.mlir  bicg_1024.cpp  bicg_1024.mlir  bicg_128.cpp  bicg_128.mlir  bicg_2048.cpp  bicg_2048.mlir  bicg_256.cpp  bicg_256.mlir  bicg_32.cpp  bicg_32.mlir  bicg_4096.cpp  bicg_4096.mlir  bicg_512.cpp  bicg_512.mlir  bicg_64.cpp  bicg_64.mlir  bicg_8192.cpp  bicg_temp.cpp  bicg_test.cpp  bicg_test.mlir
samples/blur/: blur.cpp  blur.csv
samples/edgeDetect/: edgeDetect.csv
samples/example/: example.cpp  example.csv  mobilenettmp.cpp  mobilenettmp.mlir  pyvgg.mlir
samples/gaussian/: gaussian.cpp  gaussian.csv  vgg.csv
samples/gemm/: gemm.cpp  gemm.csv  gemm.mlir  gemm1.cpp  gemm_1024.cpp  gemm_1024.mlir  gemm_128.cpp  gemm_128.mlir  gemm_2048.cpp  gemm_2048.mlir  gemm_256.cpp  gemm_256.mlir  gemm_32.cpp  gemm_32.mlir  gemm_4096.mlir  gemm_512.cpp  gemm_512.mlir  gemm_64.cpp  gemm_64.mlir  gemm_8192.cpp  gemm_8192.mlir
samples/gemver/: gemver.cpp  gemver.csv  gemver.mlir
samples/gesummv/: gesummv.cpp  gesummv.csv  gesummv.mlir  gesummv_1024.cpp  gesummv_1024.mlir  gesummv_128.cpp  gesummv_128.mlir  gesummv_2048.cpp  gesummv_2048.mlir  gesummv_256.cpp  gesummv_256.mlir  gesummv_32.cpp  gesummv_32.mlir  gesummv_512.cpp  gesummv_512.mlir  gesummv_64.cpp  gesummv_64.mlir  gesummv_8192.cpp  gesummv_8192.mlir
samples/heat/: heat.cpp  heat.csv  heat.mlir
samples/jacobi/: jacobi.cpp  jacobi.csv  jacobi.mlir
samples/jacobi2d/: jacobi2d.csv
samples/resnet/: final_4_2.cpp  resnet._max_t4_pipe_int.cpp  resnet.cpp  resnet.csv  resnet.mlir  resnet_baseline.cpp  resnet_factor_2.cpp  resnet_max_t2_pipeoff.cpp  resnet_t4_max_2 copy.cpp  resnet_t4_max_2_int.cpp  resnet_t4_t2_max_pipeoff _int.cpp  resnet_t4_t2_max_pipeoff.cpp
samples/resnet18_test/: resnet18.mlir
samples/sediel/: sediel.cpp  sediel.mlir
samples/seidel/: sediel.cpp  seidel.mlir
samples/test/: test.cpp  test.mlir  test_conv.cpp  test_ori.cpp  test_ping-pong.cpp  test_vgg_opt.cpp
samples/test_max/: test_max.cpp  test_max.mlir
samples/vgg/: vgg.csv
samples/vgg16/: vgg16.cpp  vgg16.mlir  vgg16_t4_pipeoff_max.cpp  vgg16_t8_pipeoff_max.cpp
samples/vgg16-base/: vgg16-base.cpp  vgg16-base.mlir
samples_4_paper/2mm/: 2mm.cpp  2mm.csv  2mm.mlir
samples_4_paper/3mm/: 3mm.csv
samples_4_paper/atax/: atax.csv
samples_4_paper/bicg/: bicg.csv  bicg.mlir
samples_4_paper/blur/: blur.csv  blur.mlir
samples_4_paper/gemm/: gemm.csv  gemm.mlir
samples_4_paper/jacobi/: heat.csv  heat.mlir  jacobi.cpp  jacobi.csv
samples_4_paper/sediel/: sediel.csv
samples_4_paper/test/: test.mlir
samples_update/: bicg.cpp  config.json
samples_update/3mm/: 3mm.mlir
samples_update/blur/: blur.cpp  blur.mlir
samples_update/edgeDetect/: edgeDetect.mlir
samples_update/example/: example.mlir
samples_update/gaussian/: gaussian.mlir  vgg.mlir
samples_update/gemm/: gemm.cpp
samples_update/gemver/: gemver.cpp
samples_update/gesummv/: gesummv.cpp  gesummv.mlir
samples_update/jacobi2d/: jacobi2d.cpp  jacobi2d.mlir
samples_update/resnet/: resnet.cpp  resnet.mlir
samples_update/sediel/: sediel.cpp
samples_update/test/: sediel.mlir  test.cpp
samples_update/vgg/: vgg.cpp  vgg.mlir  (+1 more)
testbench/: 2mm.cpp  3mm.cpp  atax.cpp  bicg.cpp  blur.cpp  edgeDetect.cpp  example.cpp  gaussian.cpp  gemm.cpp  gemver.cpp  gesummv.cpp  heat.cpp  isl_test.cpp  jacobi.cpp  jacobi2d.cpp  resnet.cpp  resnet16.cpp  resnet18-base.cpp  resnet18_auto.cpp  resnet18_test.cpp  sediel.cpp  seidel.cpp  syrk.cpp  temp.cpp  test.cpp  test_max.cpp  vgg.cpp  vgg16-base.cpp  vgg16.cpp
